feat: add user stats
